welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: ';' expected but 'else' found.
	else if("L"){
        ^BDRBuggle:40: error: '}' expected but eof found.
}
  ^